--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -71,6 +71,11 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=schedule,pattern=main
+            type=ref,event=branch
+            type=ref,event=tag
+            type=ref,event=pr
           flavor: |
             suffix=-${{ matrix.arch }},onlatest=true
 
