--- a/.github/workflows/edge-integration-tests.yaml
+++ b/.github/workflows/edge-integration-tests.yaml
@@ -12,5 +12,6 @@ jobs:
     uses: ./.github/workflows/integration-tests.yaml
     with:
       mondooClientImageTag: ${{ github.event.inputs.mondooClientImageTag }}
+      useEdge: true
     secrets: inherit
     
