--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -5,8 +5,14 @@ on:
       mondooClientImageTag:
         required: true
         type: string
+      useEdge:
+        required: false
+        type: boolean
+        default: false
     secrets:
       MONDOO_CLIENT:
+        required: true
+      MONDOO_CLIENT_EDGE:
         required: true
 
 env:
@@ -58,7 +64,13 @@ jobs:
       - name: Print workflow inputs
         run: echo "${{ toJSON(github.event.inputs) }}"
 
-      - name: Store creds
+      - name: Store creds (edge)
+        if: ${{ github.event.inputs.useEdge }}
+        run: |
+          echo ${{ secrets.MONDOO_CLIENT_EDGE }} | base64 -d > creds.json
+
+      - name: Store creds (prod)
+        if: ${{ !github.event.inputs.useEdge }}
         run: |
           echo ${{ secrets.MONDOO_CLIENT }} | base64 -d > creds.json
 
