--- a/charts/mondoo-operator/templates/deployment.yaml
+++ b/charts/mondoo-operator/templates/deployment.yaml
@@ -71,6 +71,9 @@ spec:
           }}
         securityContext:
           allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+            - ALL
           readOnlyRootFilesystem: true
       securityContext:
         runAsNonRoot: true
