--- a/charts/mondoo-operator/templates/deployment.yaml
+++ b/charts/mondoo-operator/templates/deployment.yaml
@@ -12,6 +12,13 @@ metadata:
   labels:
   {{- include "mondoo-operator.labels" . | nindent 4 }}
 ---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: {{ include "mondoo-operator.fullname" . }}-webhook
+  labels:
+  {{- include "mondoo-operator.labels" . | nindent 4 }}
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
