🐛 Fix boolean for useEdge
This is according to this comment: https://github.com/actions/runner/issues/1483\#issuecomment-1042393939

Signed-off-by: Christian Zunker <christian@mondoo.com>

--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -65,12 +65,12 @@ jobs:
         run: echo "${{ toJSON(github.event.inputs) }}"
 
       - name: Store creds (edge)
-        if: ${{ github.event.inputs.useEdge }}
+        if: ${{ inputs.useEdge == true }}
         run: |
           echo ${{ secrets.MONDOO_CLIENT_EDGE }} | base64 -d > creds.json
 
       - name: Store creds (prod)
-        if: ${{ !github.event.inputs.useEdge }}
+        if: ${{ inputs.useEdge == false }}
         run: |
           echo ${{ secrets.MONDOO_CLIENT }} | base64 -d > creds.json
 
