🐛 Ensure manifest gets latest tag
Fixes #621

Signed-off-by: Christian Zunker <christian@mondoo.com>

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -362,6 +362,8 @@ jobs:
     uses: ./.github/workflows/release-manifests.yaml
     needs:
       - push-virtual-tag
+# this should ensure the manifest is tagged latest, which is required for the install automation
+      - release-helm
 
   # publish helm chart after the release of container images is complete
   run-helm-tests:
