--- a/config/samples/k8s_v1alpha2_mondooauditconfig.yaml
+++ b/config/samples/k8s_v1alpha2_mondooauditconfig.yaml
@@ -32,9 +32,12 @@ spec:
     mode: permissive
   filtering:
     namespaces:
-      exclude:
-        - kube-system
       include:
         - default
         - my-workload
         - mondoo-operator
+      # Specifying both include and exclude results in the exclude
+      # list being ignored, as the include list is effectively the
+      # same as exclude ALL except for the include list.
+      exclude:
+        - kube-system
