⭐️ include/exclude Namespaces filtering (#633)
* namespace inclusion / exclusion

Extend MondooAuditConfig to allow specifying Namespaces to include or
exclude. Specifying anything in Include will override anything listed in
Exclude (as Include effectively excludes everything that isn't in the
Include list).

ensure the following components are aware of include/exclude namespaces:

k8s scanning binary receives --namespaces and --namespaces-exclude param
and passes them down via inventory options when performing the periodic
scan Jobs.

the webhook can be launched with --namespaces --namespaces-exclude to
also affect whether a resource the webhook has been notified about
should be skipped or scanned.

the scan_api_store stores the include/exclude data to be used for
deciding whether or not to scan the batches of items is processes.

some of the decisions on whether to scan or not could have been pushed
down into the mondoo scan-api Pod itself, but it was easy enough to just
filter resources out without needing to trigger any kind of scanning by
the scan-api Service.

Signed-off-by: Joel Diaz <joel@mondoo.com>

--- a/config/samples/k8s_v1alpha2_mondooauditconfig.yaml
+++ b/config/samples/k8s_v1alpha2_mondooauditconfig.yaml
@@ -30,4 +30,14 @@ spec:
       tag: latest
     # could be "permissive" or "enforcing"
     mode: permissive
-  
+  filtering:
+    namespaces:
+      include:
+        - default
+        - my-workload
+        - mondoo-operator
+      # Specifying both include and exclude results in the exclude
+      # list being ignored, as the include list is effectively the
+      # same as exclude ALL except for the include list.
+      exclude:
+        - kube-system
