--- a/charts/mondoo-operator/templates/mondooauditconfig-crd.yaml
+++ b/charts/mondoo-operator/templates/mondooauditconfig-crd.yaml
@@ -99,6 +99,27 @@ spec:
                   enable:
                     type: boolean
                 type: object
+              filtering:
+                properties:
+                  namespaces:
+                    properties:
+                      exclude:
+                        description: Exclude is the list of resources to ignore for
+                          any watching/scanning actions. Use this if the goal is to
+                          watch/scan all resources except for this Exclude list.
+                        items:
+                          type: string
+                        type: array
+                      include:
+                        description: Include is the list of resources to watch/scan.
+                          Setting Include overrides anything in the Exclude list as
+                          specifying an Include list is effectively excluding everying
+                          except for what is on the Include list.
+                        items:
+                          type: string
+                        type: array
+                    type: object
+                type: object
               kubernetesResources:
                 properties:
                   containerImageScanning:
