--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -19,8 +19,8 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version: "${{ env.golang-version }}"
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v3
-        with:
-          version: v1.49
-          args: --timeout=5m0s
+      # - name: golangci-lint
+      #   uses: golangci/golangci-lint-action@v3
+      #   with:
+      #     version: v1.49
+      #     args: --timeout=5m0s
