allow globbing support for include/exclude Namespaces
Signed-off-by: Joel Diaz <joel@mondoo.com>

--- a/config/samples/k8s_v1alpha2_mondooauditconfig.yaml
+++ b/config/samples/k8s_v1alpha2_mondooauditconfig.yaml
@@ -34,7 +34,7 @@ spec:
     namespaces:
       include:
         - default
-        - my-workload
+        - my-work*
         - mondoo-operator
       # Specifying both include and exclude results in the exclude
       # list being ignored, as the include list is effectively the
