Allow to trigger cleanup manually
Signed-off-by: Christian Zunker <christian@mondoo.com>

--- a/.github/workflows/cleanup-mondoo-space.yaml
+++ b/.github/workflows/cleanup-mondoo-space.yaml
@@ -2,6 +2,12 @@ name: "Cleanup Mondoo space"
 on:
   schedule:
   - cron: "11 3 * * *" # 3:11am UTC
+  workflow_dispatch:
+    secrets:
+      MONDOO_CLIENT_EDITOR:
+        required: true
+      MONDOO_CLIENT_EDITOR_EDGE:
+        required: true
 
 jobs:
   cleanup-prod:
