--- a/.github/workflows/cleanup-mondoo-space.yaml
+++ b/.github/workflows/cleanup-mondoo-space.yaml
@@ -18,11 +18,11 @@ jobs:
       - name: Store cleanup creds
         run: |
           echo ${{ secrets.MONDOO_CLIENT_EDITOR }} | base64 -d > creds_editor.json
-      - uses: mondoohq/actions/setup@main
+      
+      - name: Install mondoo client
         if: success() || failure()
-        with:
-          service-account-credentials: ${{ secrets.MONDOO_CLIENT_EDITOR }}
-          args: status
+        run: |
+          bash -c "$(curl -sSL https://install.mondoo.com/sh)"
 
       - name: Cleanup Mondoo space "GitHub Actions Mondoo Operator"
         if: success() || failure()
@@ -41,11 +41,11 @@ jobs:
       - name: Store cleanup creds
         run: |
           echo ${{ secrets.MONDOO_CLIENT_EDITOR_EDGE }} | base64 -d > creds_editor.json
-      - uses: mondoohq/actions/setup@main
+      
+      - name: Install mondoo client
         if: success() || failure()
-        with:
-          service-account-credentials: ${{ secrets.MONDOO_CLIENT_EDITOR_EDGE }}
-          args: status
+        run: |
+          bash -c "$(curl -sSL https://install.mondoo.com/sh)"
 
       - name: Cleanup Mondoo Edge space "k8s-operator-edge-testing"
         if: success() || failure()
