--- a/.github/workflows/tests-forks.yaml
+++ b/.github/workflows/tests-forks.yaml
@@ -32,6 +32,8 @@ jobs:
       - name: remove labels
         run: |
           gh pr edit ${{ github.event.pull_request.number }} --remove-label "ok to test"
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   unit-tests:
     needs: [check-label]
     if: needs.check-label.result == 'success'
