--- a/.github/workflows/tests-forks.yaml
+++ b/.github/workflows/tests-forks.yaml
@@ -29,6 +29,9 @@ jobs:
       issues: write
       pull-requests: write
     steps:
+      - uses: actions/checkout@v3
+        with:
+          persist-credentials: false
       - name: remove labels
         run: |
           gh pr edit ${{ github.event.pull_request.number }} --remove-label "ok to test"
