--- a/.github/workflows/spell-check.yaml
+++ b/.github/workflows/spell-check.yaml
@@ -3,9 +3,7 @@ name: Spell Checking
 
 on:
   pull_request:
-  push:
-    branches:
-      - main
+    types: [opened, reopened, synchronize]
 
 jobs:
   spelling:
@@ -49,7 +47,7 @@ jobs:
     if: (success() || failure()) && needs.spelling.outputs.followup
     steps:
       - name: comment
-        uses: check-spelling/check-spelling@v0.0.20
+        uses: check-spelling/check-spelling@v0.0.21
         with:
           checkout: true
           task: ${{ needs.spelling.outputs.followup }}
