delete generated files
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,7 @@ tests/integration/_output
 
 /cnquery
 /cnspec
+
+tests/framework/**/*.actions.go
+tests/framework/**/*.pb.go
+tests/framework/**/*.ranger.go
