fix linting step
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -19,6 +19,7 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version: "${{ env.golang-version }}"
+      - run: make generate
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
