--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -60,6 +60,11 @@ jobs:
         with:
           go-version: "${{ env.golang-version }}"
 
+      - name: Install Protoc
+        uses: arduino/setup-protoc@v1
+        with:
+          version: '3.x'
+
       # Makes it easier to see what was the input for this workflow in case we need to debug.
       - name: Print workflow inputs
         run: echo "${{ toJSON(github.event.inputs) }}"
