--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -22,6 +22,11 @@ jobs:
         with:
           go-version: "${{ env.golang-version }}"
           cache: true
+
+      - name: Install Protoc
+        uses: arduino/setup-protoc@v1
+        with:
+          version: '3.x'
       
       - run: make test/ci
       - uses: actions/upload-artifact@v3  # upload test results
