--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -61,7 +61,7 @@ jobs:
           go-version: "${{ env.golang-version }}"
 
       - name: Install Protoc
-        run: apt install -y protobuf-compiler
+        run: sudo apt install -y protobuf-compiler
 
       # Makes it easier to see what was the input for this workflow in case we need to debug.
       - name: Print workflow inputs
