--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -24,7 +24,10 @@ jobs:
           cache: true
 
       - name: Install Protoc
-        run: sudo apt install -y protobuf-compiler
+        run: |
+          sudo apt install -y gcc
+          make prep/ci/protoc
+          echo "${{ github.workspace }}/tools/bin" >> $GITHUB_PATH
       
       - run: make test/ci
       - uses: actions/upload-artifact@v3  # upload test results
