🧹 Explicitly set privileged to false
Fixes #718

Signed-off-by: Christian Zunker <christian@mondoo.com>

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -52,6 +52,7 @@ spec:
           capabilities:
             drop:
             - ALL
+          privileged: false
         livenessProbe:
           httpGet:
             path: /healthz
