--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -43,6 +43,8 @@ spec:
         env:
         - name: FEATURE_ENABLE_GARBAGE_COLLECTION
           value: "1"
+        - name: FEATURE_ENABLE_CNSPEC
+          value: "1"
         image: controller:latest
         imagePullPolicy: IfNotPresent
         name: manager
