--- a/.github/workflows/edge-integration-tests.yaml
+++ b/.github/workflows/edge-integration-tests.yaml
@@ -2,8 +2,8 @@ name: Edge integration tests
 on:
   workflow_dispatch:
     inputs:
-      mondooClientImageTag:
-        description: "The Mondoo client image tag to be used for the integration tests"
+      cnspecImageTag:
+        description: "The cnspec image tag to be used for the integration tests"
         required: true
         type: string
 
@@ -11,7 +11,7 @@ jobs:
   integration-tests:
     uses: ./.github/workflows/integration-tests.yaml
     with:
-      mondooClientImageTag: ${{ github.event.inputs.mondooClientImageTag }}
+      cnspecImageTag: ${{ github.event.inputs.cnspecImageTag }}
       useEdge: true
     secrets: inherit
     
