--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -30,5 +30,5 @@ jobs:
     if: needs.unit-tests.result == 'success'
     uses: ./.github/workflows/integration-tests.yaml
     with:
-      mondooClientImageTag: ""
+      cnspecImageTag: ""
     secrets: inherit
