--- a/.github/workflows/cloud-tests.yaml
+++ b/.github/workflows/cloud-tests.yaml
@@ -52,7 +52,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        k8s-version: ["1.22", "1.23", "1.24", "1.25"]
+        k8s-version: ["1.23", "1.24", "1.25"]
 
     steps:
       - uses: actions/checkout@v3
