--- a/charts/mondoo-operator/templates/deployment.yaml
+++ b/charts/mondoo-operator/templates/deployment.yaml
@@ -49,14 +49,13 @@ spec:
         - /mondoo-operator
         env:
         - name: FEATURE_ENABLE_GARBAGE_COLLECTION
-          value: "1"
-        - name: FEATURE_ENABLE_CNSPEC
-          value: "1"
+          value: {{ .Values.controllerManager.manager.env.featureEnableGarbageCollection
+            }}
         - name: KUBERNETES_CLUSTER_DOMAIN
           value: {{ .Values.kubernetesClusterDomain }}
         image: {{ .Values.controllerManager.manager.image.repository }}:{{ .Values.controllerManager.manager.image.tag
           | default .Chart.AppVersion }}
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: {{ .Values.controllerManager.manager.imagePullPolicy }}
         livenessProbe:
           httpGet:
             path: /healthz
