--- a/charts/mondoo-operator/values.yaml
+++ b/charts/mondoo-operator/values.yaml
@@ -1,10 +1,17 @@
 controllerManager:
   manager:
+    containerSecurityContext:
+      allowPrivilegeEscalation: false
+      capabilities:
+        drop:
+        - ALL
+      privileged: false
+      readOnlyRootFilesystem: true
     env:
-      featureEnableGarbageCollection: "1"
+      featureEnableGarbageCollection: "true"
     image:
       repository: ghcr.io/mondoohq/mondoo-operator
-      tag: v1.12.0
+      tag: v1.12.1
     imagePullPolicy: IfNotPresent
     resources:
       limits:
